fix artwork file images not showing on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -194,7 +194,7 @@ a {
 }
 
 .randomArtwork {
-    margin: auto;
+    /* margin: auto; */
     width: 100%;
     display: flex;
     justify-content: space-around;
